--- a/landingpage.css
+++ b/landingpage.css
@@ -1,5 +1,19 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    --box-sizing: border-box;
+}
+body{
+    width: 1000px;
+    height: 1000px;
+}
+.Bilder{
+    display: flex;
+    flex-direction: row;
+    width: 1000px;
+    height: 1000px;
+}
+.Bilder div{
+    width: 300px;
+    height: 300px;
 }
