--- a/landingpage.css
+++ b/landingpage.css
@@ -4,16 +4,20 @@
     --box-sizing: border-box;
 }
 body{
-    width: 1000px;
-    height: 1000px;
+    width: 100%;
+    height: 100%;
 }
 .Bilder{
     display: flex;
     flex-direction: row;
-    width: 1000px;
-    height: 1000px;
+
 }
 .Bilder div{
-    width: 300px;
-    height: 300px;
+    width: 50%;
+    height: 50%;
+}
+
+.bilder img{
+    display: flex;
+    flex-direction: row;
 }
