--- a/halsband.css
+++ b/halsband.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    max-width: 100%;
 }
 
 header {
@@ -12,11 +13,21 @@ header {
 .head {
     display: flex;
     flex-direction: row;
-    margin-right: 5%;
+    margin-left: 2%;
+
+    font-family: "Madimi One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.name {
+    font-size: 15px;
 }
 
 .head a {
     margin-left: 5%;
+    text-decoration: none;
+    color: black
 }
 
 .headermenu {
@@ -29,5 +40,8 @@ header {
 .headermenu div {
     margin-left: 10%;
     margin-right: 10%;
-    
 }
+
+
+
+
