--- a/landingpage.css
+++ b/landingpage.css
@@ -20,4 +20,6 @@ body{
 .bilder img{
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
