--- a/halsband.css
+++ b/halsband.css
@@ -50,6 +50,7 @@ header {
 
 .products input {
     width: 75px;
+    
 }
 
 .products img {
@@ -64,9 +65,10 @@ header {
     flex-direction: row;
 }
 
-.row1 div {
+.row2 {
     display: flex;
-    flex-direction: column;
-    width: 30%;
+    flex-direction: row;
 }
+
+
 
