--- a/landingpage.css
+++ b/landingpage.css
@@ -1,13 +1,48 @@
 * {
-    margin: 0;
     padding: 0;
-    --box-sizing: border-box;
+    margin: 0;
+    max-width: 100%;
 }
 
-body{
-    width: 100%;
-    height: 100%;
+header {
+    background-color: beige;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
 }
+
+.head {
+    display: flex;
+    flex-direction: row;
+    margin-left: 2%;
+
+    font-family: "Madimi One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.name {
+    font-size: 30px;
+}
+
+.head a {
+    text-decoration: none;
+    color: black
+}
+
+.headermenu {
+    display: flex;
+    flex-direction: row;
+    margin-left: 50%;
+    margin-top: 1%;
+    
+}
+
+.headermenu div {
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+
 
 
 
