--- a/landingpage.css
+++ b/landingpage.css
@@ -49,5 +49,10 @@ header {
 .Bilder{
     display: flex;
     flex-direction: row;
+    background-color:gray ;
 }
 
+
+.halsband img{
+    background-color: gray;
+}
