--- a/halsband.css
+++ b/halsband.css
@@ -44,31 +44,53 @@ header {
 
 
 
-
-
-
-
-.products button {
-    width: 75px;
-    margin-left: 40%;
+.main {
+    width: 100%;
+    border: 0.1rem solid black;
+    margin-top: 2.5%;
 }
-
-.products img {
-    width: 500px;
-    height: 500px;
-}
-
 
 
 .row1 {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    margin-bottom: 2.5%;
 }
 
 .row2 {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 2.5%;
 }
+
+.products img{
+    width: 500px;
+    height: 500px;
+    border: 0.1rem solid black;
+    transition: all 0.2s ease-in-out;
+}
+
+.products img:hover {
+    background: black;
+    width: 505px;
+    height: 505px;
+}
+
+.row1 div {
+    display: flex;
+    flex-direction: column;
+}
+
+.row2 div {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+
 
 
 
