--- a/landingpage.css
+++ b/landingpage.css
@@ -44,14 +44,26 @@ header {
 
 
 
+.bg{
+    background-image: url("helsk.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
+.main {
+    display: flex;
+    flex-direction: column;
+}
 
 .Bilder{
     display: flex;
     flex-direction: row;
 }
 
-
 .body{
-    background-color: green;
+    background-color: antiquewhite;
 }
+
+
