--- a/landingpage.css
+++ b/landingpage.css
@@ -46,7 +46,7 @@ header {
 
 .bg{
     background-image: url("helsk.jpg");
-    height: 100%;
+    height: 100%;dfdfh
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
