--- a/landingpage.css
+++ b/landingpage.css
@@ -44,12 +44,23 @@ header {
 
 
 
-.bg{
-    background-image: url("helsk.jpg");
-    height: 100%;dfdfh
+.bg {
+    background-image: url("smycken2.jpg");
+    height: 100vh;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+    z-index: 2; 
+    filter: blur(1.5px);
+    transition: transform 1s ease;
+    background-color:gray;
+}
+
+
+.bg:hover {
+    transform: translateY(-20px);
 }
 
 .main {
@@ -57,13 +68,11 @@ header {
     flex-direction: column;
 }
 
-.Bilder{
+.Bilder {
     display: flex;
     flex-direction: row;
-}
-
-.body{
-    background-color: antiquewhite;
+    position: relative; 
+    z-index: 1;
 }
 
 
