--- a/halsband.css
+++ b/halsband.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    background-color: beige;
+    background-color: #ccccfa;
     padding-top: 2.5%;
     padding-bottom: 2.5%;
 }
@@ -42,6 +42,11 @@ header {
     margin-right: 10%;
 }
 
+
+
+body {
+    background-color: #E6E6FA;
+}
 
 
 .main {
