--- a/landingpage.css
+++ b/landingpage.css
@@ -4,6 +4,10 @@
     max-width: 100%;
 }
 
+body {
+    background-color: #E6E6FA;
+}
+
 header {
     background-color: beige;
     padding-top: 2.5%;
@@ -51,16 +55,30 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
-    z-index: 2; 
-    filter: blur(1.5px);
-    transition: transform 1s ease;
-    background-color:gray;
+
+}
+
+.slogan{
+    color: white;
+    font-size: 30px;
+    
+    font-family: "Sniglet", system-ui;
+    font-weight: 400;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 30px;
+
 }
 
 
-.bg:hover {
-    transform: translateY(-20px);
+.shader {
+    background-color:rgba(117, 111, 111, 0.67);
+    width: 100%;
+    height: 100vh;
 }
 
 .main {
@@ -73,6 +91,17 @@ header {
     flex-direction: row;
     position: relative; 
     z-index: 1;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.Bilder img {
+    border: 0.1rem solid gray;
+    margin: 20px;
+    width:400px;
+    height: 400px;
+
 }
 
 
