--- a/landingpage.css
+++ b/landingpage.css
@@ -5,14 +5,14 @@
 }
 
 body {
-    background-color:rgb(240, 240, 223);
+    background-color:rgb(250, 250, 236);
 }
 
 header {
     background-color: beige;
     padding-top: 2.5%;
     padding-bottom: 2.5%;
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+    filter: drop-shadow(0px 15px 5px);
 }
 
 .head {
@@ -30,7 +30,8 @@ header {
 
 .head a {
     text-decoration: none;
-    color: black
+    color: black;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.1);
 }
 
 .headermenu {
@@ -43,6 +44,7 @@ header {
 .headermenu div {
     margin-left: 10%;
     margin-right: 10%;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -100,7 +102,7 @@ header {
     margin: 20px;
     width:400px;
     height: 400px;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.5);
     transition: transform 1s ease-in-out;
     margin-bottom: 50px;
 }
@@ -124,7 +126,7 @@ header {
     font-weight: bold;
     opacity: 0; 
     transition: opacity 2s ease-in-out; 
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
 }
 
 .Halsband .image-text {
