--- a/landingpage.css
+++ b/landingpage.css
@@ -5,11 +5,11 @@
 }
 
 body {
-    background-color:rgb(250, 250, 236);
+    background-color: #E6E6FA;
 }
 
 header {
-    background-color: beige;
+    background-color: #ccccfa;
     padding-top: 2.5%;
     padding-bottom: 2.5%;
     filter: drop-shadow(0px 15px 5px);
@@ -105,15 +105,13 @@ header {
     box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.5);
     transition: transform 1s ease-in-out;
     margin-bottom: 50px;
+    border: 15px solid rgb(250, 250, 236);
 }
 
 .Bilder img:hover {
     transform: scale(1.05);
 }
 
-.Bilder {
-    position: relative; 
-}
 
 .image-text {
     position: absolute; 
