--- a/products.css
+++ b/products.css
@@ -77,6 +77,7 @@ body {
     height: 400px;
     transition: all 0.2s ease-in-out;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    border: 15px solid rgb(250, 250, 236);
 }
 
 
